--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -290,6 +290,6 @@
     </div>
   </main>
 
-  <footer>&copy; 2025 Sistem Pengajuan Surat farisy. All rights reserved.</footer>
+  <footer>&copy; 2025 Sistem Pengajuan Surat farisy edward. All rights reserved.</footer>
 </body>
 </html>
