--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -263,6 +263,6 @@
     </div>
   </main>
 
-  <footer>&copy; 2025 Sistem Pengajuan Surat. All rights reserved.</footer>
+  <footer>&copy; 2025 Sistem Pengajuan Surat Rico Presma. All rights reserved.</footer>
 </body>
 </html>
